--- a/css/login.css
+++ b/css/login.css
@@ -4,6 +4,9 @@ body {
   background-size: cover;
   background-position: center;
 }
+::-webkit-scrollbar {
+  display: none;
+}
 
 .container {
   width: 100%;
@@ -25,6 +28,12 @@ body {
   min-width: 400px;
   border-radius: 30px;
   border: 4px solid #9378cf;
+}
+#show {
+  display: none;
+}
+#hide {
+  display: block;
 }
 .brand-logo {
   cursor: pointer;
@@ -86,14 +95,15 @@ input:focus {
   margin: 10px auto;
   text-shadow: 0 0px 2px rgb(0, 0, 0);
 }
-.new-acc a {
+.new-acc {
   text-decoration: none;
   font-size: 20px;
   color: #6244a4e7;
   font-family: Arial, Helvetica, sans-serif;
+  cursor: pointer;
 }
-.new-acc a:hover {
-  color: #5c3aa5fd;
+.new-acc:hover {
+  color: #3c2964e7;
 }
 
 .bottom-section {
