--- a/css/login.css
+++ b/css/login.css
@@ -118,13 +118,15 @@ input:focus {
 .forget-pass {
   font-weight: 500;
   margin-top: 15px;
-
+  text-decoration: none;
   margin-bottom: 40px;
   font-family: Arial, Helvetica, sans-serif;
   color: rgba(51, 51, 51, 0.699);
 }
 .forget-pass a {
   font-size: 16px;
+  text-decoration: none;
+
   font-weight: 500;
   color: rgba(51, 51, 51, 0.808);
   font-family: Arial, Helvetica, sans-serif;
