--- a/css/login.css
+++ b/css/login.css
@@ -29,6 +29,19 @@ body {
   border-radius: 30px;
   border: 4px solid #9378cf;
 }
+.form-area2 {
+  box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.1);
+  margin: 20px 0 0 0;
+  background-color: #f4f4f4;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-width: 750px;
+  border-radius: 30px;
+  border: 4px solid #9378cf;
+}
 #show {
   display: none;
 }
@@ -38,6 +51,10 @@ body {
 .brand-logo {
   cursor: pointer;
   margin: 40px 0;
+}
+.brand-logo2 {
+  cursor: pointer;
+  margin: 20px 0;
 }
 .form-text {
   margin-bottom: 20px;
@@ -59,7 +76,7 @@ body {
   border-radius: 30px;
   font-size: 16px;
   outline: none;
-  transition: width 0.3s;
+  transition: 0.3s;
 }
 input:focus {
   background-color: #eeeeeee5;
@@ -67,6 +84,7 @@ input:focus {
   width: 350px;
   outline: none;
   transition: 0.3s;
+  margin:4px 0;
 }
 .form-inputs button {
   width: 320px;
@@ -89,6 +107,16 @@ input:focus {
   font-size: 18px;
   text-decoration: none;
 }
+.splitter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
+}
+.splitter input {
+  margin: 5px 15px;
+}
+
 .form-input-a {
   font-family: Arial, Helvetica, sans-serif;
   color: rgba(51, 51, 51, 0.795);
