--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
 body {
   background: url(../img/bgO.png);
   background-repeat: no-repeat;
@@ -34,6 +38,7 @@ nav li a:hover {
   transition: all 0.5s;
   color: #6344a4;
 }
+
 .active {
   position: relative;
   color: rgba(51, 51, 51, 0.699);
@@ -82,8 +87,8 @@ nav li a:hover:before {
 } */
 
 .brand-logo {
-  margin-left: 30px;
-  margin-top: 0px;
+  margin-left: 0px;
+  margin-top: 30px;
 }
 .right {
   margin-right: 50px;
@@ -95,25 +100,26 @@ nav li a:hover:before {
 /*conent*/
 .content {
   width: 50%;
-  margin: 50px 0 0 80px;
+  margin: 40px 0 0 80px;
 }
 .head-content {
-  font-size: 40px;
-  font-weight: 1000;
+  font-size: 50px;
+  font-weight: 800;
   color: #333;
-  margin-top: 100px;
+  margin-top: 80px;
   line-height: 3.5rem;
 }
 .slogan {
-  font-size: 50px;
+  font-size: 30px;
   color: rgba(51, 51, 51, 0.829);
-  line-height: 0.1rem;
-  font-family: sans-serif;
 
-  margin: -20px 0 30px 0;
+  font-family: sans-serif;
+  text-transform: capitalize;
+  margin: -50px 0 -10px 0;
 }
 .lorem {
   text-align: left;
+
   color: rgba(51, 51, 51, 0.829);
 }
 .user-area {
@@ -124,7 +130,7 @@ nav li a:hover:before {
   position: relative;
   color: rgba(51, 51, 51, 0.829);
 }
-.user-area:before {
+/* .user-area:before {
   content: "";
   position: absolute;
   left: 42%;
@@ -132,7 +138,7 @@ nav li a:hover:before {
   height: 100%;
   width: 2px;
   background-color: #6344a4;
-}
+} */
 .user-area button {
   margin: 0 auto;
   background-color: #6344a4;
@@ -156,11 +162,14 @@ nav li a:hover:before {
 }
 .leftside {
   /* border: 2px solid #6344a4;*/
-  width: 40%;
+
+  border-right: 1px solid #6344a4;
+  padding: 0 20px;
 }
 .rightside {
-  width: 40%;
-  margin-left: 30px;
+  padding: 0 20px;
+
+  border-left: 2px solid #6344a4;
 
   /* border:2px solid #6344a4; */
 }
