--- a/css/upload.css
+++ b/css/upload.css
@@ -9,14 +9,15 @@ nav {
 
   width: 100%;
   height: 80px;
-  border-bottom: 2px solid #6244a4f8;
-  box-shadow: none;
+  border-bottom: 1px solid #6244a4f8;
+  box-shadow: 0 0 3px #6244a4e3;
+  /* position: fixed; */
 }
 
 nav li a {
   margin-top: 15px;
   border-radius: 30px;
-  border: 2px solid #6244a4e3;
+  border: 1px solid #6244a4e3;
   position: relative;
   color: #6344a4;
   font-weight: 700;
@@ -59,7 +60,7 @@ nav li a:hover {
 
 .form-a-border input {
   min-height: 20px !important;
-  padding: 0 20px !important;
+  padding : 0 25px !important;
   border: 1px solid #6344a4 !important;
   border-radius: 15px !important;
   max-width: 560px !important;
@@ -72,7 +73,7 @@ nav li a:hover {
 
 .form-a-border input:focus {
   all: unset !important;
-  padding: 0 20px !important;
+  padding : 0 25px !important;
   min-width: 560px !important;
   min-height: 45px !important;
   border: 1px solid #6344a4 !important;
@@ -131,7 +132,7 @@ input[type="file"] {
   border: none !important;
   min-width: 600px !important;
   min-height: 45px !important;
-  padding: 0 20px !important;
+  padding : 0 25px !important;
   border: 1px solid #6344a4 !important;
   border-radius: 15px !important;
 }
@@ -141,7 +142,7 @@ input[type="file"] {
   border: none !important;
   min-width: 600px !important;
   min-height: 45px !important;
-  padding: 0 20px !important;
+  padding : 0 25px !important;
   border: 1px solid #6344a4 !important;
   border-radius: 15px !important;
 }
@@ -200,3 +201,26 @@ input[type="file"] {
 [type="radio"].with-gap:checked + span:after {
   background-color: #4e2c96;
 }
+
+#price-bar {
+  position: relative;
+  margin-top: 20px;
+  font-size: 20px;
+  
+}
+
+
+
+
+#price-bar::before {
+  position: absolute;
+  content: '$';
+  color: green;
+  width: 50px;
+  height: 50px;
+  top: 39%;
+  font-size: 20px;
+  left: 10px;
+
+
+
