--- a/css/profile.css
+++ b/css/profile.css
@@ -158,7 +158,7 @@ height: 0px;
 
 
 .test{
-    background: lightgrey;
+    background: rgb(197, 10, 10,0);
     width: 100%;
     height: 650px;
 }
