--- a/css/login.css
+++ b/css/login.css
@@ -3,18 +3,19 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  
 }
 ::-webkit-scrollbar {
   display: none;
 }
 
 .container {
-  width: 100%;
+ 
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin: 0 auto;
+ box-sizing: border-box;
 }
 .form-area {
   box-shadow: 0 0 15px 5px rgba(0, 0, 0, 0.1);
@@ -25,7 +26,7 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
-  min-width: 400px;
+  min-width: 380px;
   border-radius: 30px;
   border: 4px solid #9378cf;
 }
@@ -38,7 +39,8 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
-  min-width: 750px;
+  max-width: 750px;
+  min-width: 400px;
   border-radius: 30px;
   border: 4px solid #9378cf;
 }
@@ -109,9 +111,9 @@ input:focus {
 }
 .splitter {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
-  margin: 10px;
+  
 }
 .splitter input {
   margin: 5px 15px;
@@ -168,26 +170,13 @@ input:focus {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/* .loader {
-  border: 5px solid #292929;
-  border-top: 5px solid #6344a4; 
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  animation: spin 2s linear infinite;
-  margin-left: 130px;
-  margin-top: 20px;
-}
-#loading-icon {
-  transition: 3s;
-  opacity: 0;
+@media screen and (max-width: 800px) {
+.splitter{
+  display: block;
+  margin: 0;
 }
 
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-} */
+.show{
+  max-width: 200px;
+}
+}
