--- a/css/profile.css
+++ b/css/profile.css
@@ -1,20 +1,20 @@
 * {
     padding: 0;
     margin: 0;
+
 }
 
 body {
+
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.gwafa {
-    background: #333;
-}
 
 /* NAVBARAREA */
 .nav-container {
     box-shadow: 0 0 10px black;
     height: 80px;
+
 }
 
 ul {
@@ -44,14 +44,16 @@ ul {
     padding: 15px 15px;
     font-weight: 600;
     border-radius: 30px;
-    transition: 0.2s;
+    transition: .2s;
+
 }
 
 .menu ul li:hover {
     border-radius: 30px;
-    background-color: rgb(99, 68, 164, 0.8);
+    background-color: rgb(99, 68, 164, .8);
     color: white;
-    transition: 0.2s;
+    transition: .2s;
+
 }
 
 .menu i {
@@ -59,7 +61,9 @@ ul {
     margin: 30px;
 
     cursor: pointer;
+
 }
+
 
 /* NAVBARAREA */
 
@@ -70,13 +74,17 @@ ul {
 
     display: flex;
     width: 100%;
+
 }
 
 .content .side-bar {
     width: 20%;
     padding-top: 20px;
-    background-image: linear-gradient(rgb(200, 200, 200, 0.1), white);
+    background-image: linear-gradient(rgb(200, 200, 200, .1), white);
     position: relative;
+
+
+
 }
 
 .side-bar::after {
@@ -88,7 +96,7 @@ ul {
     position: absolute;
     top: -2;
     right: 0;
-    z-index: -55;
+    z-index: -55
 }
 
 .content .content-page {
@@ -96,6 +104,7 @@ ul {
 
     overflow: scroll;
     padding: 50px;
+
 }
 
 .content .content-page::-webkit-scrollbar {
@@ -134,20 +143,28 @@ ul {
 .side-bar-menu ul li {
     padding: 15px 30px;
 
+
     border-bottom: 1px solid rgb(150, 150, 150);
 }
 
 #moreSettings {
+
+
     height: 0px;
 
     font-size: 18px;
     border: none;
     overflow: hidden;
-    transition: 0.5s;
+    transition: .5s;
+
 }
 
 #moreSettings li {
     font-size: 16px;
+
+
+
+
 }
 
 #moreSettings li a {
@@ -155,6 +172,7 @@ ul {
     text-decoration: none;
     color: #333;
 }
+
 
 .test {
     background: rgb(197, 10, 10, 0);
