--- a/css/profile.css
+++ b/css/profile.css
@@ -88,22 +88,21 @@ ul {
 }
 
 .content .content-page {
-  width: 80%;
+  width: 90%;
 
   overflow: scroll;
-  padding: 50px;
+  padding: 10px 50px;
 }
 
 .content .content-page::-webkit-scrollbar {
-  width: 0px;
+  width: 3px;
   transition: all 1s;
-  height: 0px;
   background-color: transparent;
 }
 
 .content .content-page::-webkit-scrollbar-thumb {
   transition: all 1s;
-  background: rgba(0, 0, 0, 0.425);
+  background: rgba(0, 0, 0,.8);
   border-radius: 990px;
 }
 
@@ -153,7 +152,25 @@ ul {
 }
 
 .test {
-  background: rgb(197, 10, 10, 0);
+  margin-top: 50px;
   width: 100%;
-  height: 650px;
+  height: 600px;
+}
+.general-acc-info{
+  display: block;
+}
+.about{
+  display: none;
+}
+.services{
+  display: none;
+}
+.support{
+  display: none;
+}
+.orders{
+  display: none;
+}
+.settings{
+display: none;
 }
